--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 10:05:02 2018</p>
+         Last Run: Mon Nov 26 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,10 +33,10 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>77</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>16</td>
                         <td>SW</td>
                         <td>96</td>
                      </tr>
@@ -48,21 +48,21 @@
                         <td>4</td>
                         <td>74</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SW</td>
-                        <td>92</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-2",
                  "-2",
-                 "-1"
+                 "-2"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "2",
                  "2",
-                 "3"
+                 "2"
                ]
              }
            ]
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "4",
                  "4",
                  "4"
                ]
@@ -173,7 +173,7 @@
                "data":[
                  "77",
                  "74",
-                 "75"
+                 "76"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "96",
-                 "92",
-                 "91"
+                 "93",
+                 "92"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 10:05:02 2018</p>
+         Last Run: Mon Nov 26 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,26 +246,26 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>3</td>
-                        <td>72</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>4</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>3</td>
-                        <td>73</td>
+                        <td>4</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-6",
                  "-7",
                  "-7"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-3"
                ]
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
+                 "4",
+                 "4",
                  "3"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "71",
                  "72",
-                 "73",
-                 "75"
+                 "74"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "11",
-                 "9"
+                 "4",
+                 "5",
+                 "4"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 10:05:02 2018</p>
+         Last Run: Mon Nov 26 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>6</td>
-                        <td>68</td>
-                        <td>1</td>
+                        <td>14</td>
+                        <td>69</td>
+                        <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>62</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>6</td>
-                        <td>64</td>
+                        <td>18</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>60</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
-                        <td>64</td>
+                        <td>19</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>61</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "6",
-                 "7"
+                 "14",
+                 "18",
+                 "19"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "64",
-                 "64"
+                 "69",
+                 "66",
+                 "66"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "60",
-                 "61"
+                 "83",
+                 "83",
+                 "84"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 10:05:02 2018</p>
+         Last Run: Mon Nov 26 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,23 +675,23 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>34</td>
-                        <td>72</td>
+                        <td>16</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>15</td>
-                        <td>67</td>
+                        <td>9</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -703,11 +703,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>8</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>82</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
-                 "15",
+                 "16",
+                 "9",
                  "8"
                ]
              },
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "67",
-                 "63"
+                 "73",
+                 "68",
+                 "64"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
+                 "90",
                  "86",
-                 "82"
+                 "81"
                ]
              }
            ]
