--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 13:05:02 2018</p>
+         Last Run: Mon Nov 26 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>5</td>
-                        <td>76</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
@@ -43,26 +43,26 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>18</td>
                         <td>SW</td>
-                        <td>99</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>4</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>18</td>
                         <td>SW</td>
-                        <td>96</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-2",
-                 "-2"
+                 "-1",
+                 "-1"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "2",
-                 "2"
+                 "3",
+                 "3"
                ]
              }
            ]
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "3",
                  "4",
                  "4"
                ]
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "74",
+                 "73",
+                 "71",
                  "73"
                ]
              },
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "98",
-                 "99",
-                 "96"
+                 "97",
+                 "94"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 13:05:02 2018</p>
+         Last Run: Mon Nov 26 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,34 +246,34 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>74</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>4</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>3</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
                         <td>4</td>
                      </tr>
                      <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>3</td>
-                        <td>71</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>3</td>
-                     </tr>
-                     <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-4</td>
+                        <td>-8</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
-                 "-7"
+                 "-7",
+                 "-7",
+                 "-8"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
-                 "-2",
-                 "-3"
+                 "-3",
+                 "-3",
+                 "-4"
                ]
              }
            ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "71",
-                 "73"
+                 "74",
+                 "76",
+                 "78"
                ]
              },
              {
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "4",
-                 "3",
+                 "4",
                  "3"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 13:05:02 2018</p>
+         Last Run: Mon Nov 26 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>18</td>
-                        <td>68</td>
+                        <td>19</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -475,8 +475,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>22</td>
-                        <td>65</td>
+                        <td>23</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -488,7 +488,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>24</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "22",
+                 "19",
+                 "23",
                  "24"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "65",
-                 "65"
+                 "69",
+                 "66",
+                 "66"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 13:05:02 2018</p>
+         Last Run: Mon Nov 26 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -677,37 +677,37 @@
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>9</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>8</td>
                         <td>N</td>
-                        <td>90</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-4</td>
-                        <td>-8</td>
-                        <td>9</td>
-                        <td>68</td>
+                        <td>-7</td>
+                        <td>7</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>8</td>
                         <td>N</td>
-                        <td>87</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>8</td>
-                        <td>64</td>
+                        <td>6</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>N</td>
-                        <td>83</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
-                 "-8",
+                 "-9",
+                 "-7",
                  "-8"
                ]
              },
@@ -806,8 +806,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "9",
-                 "9",
-                 "8"
+                 "7",
+                 "6"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "68",
-                 "64"
+                 "75",
+                 "70",
+                 "66"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
-                 "87",
-                 "83"
+                 "85",
+                 "77",
+                 "66"
                ]
              }
            ]
